--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -130,6 +130,10 @@
             box-shadow: rgba(0, 0, 0, 0.3) 20px 20px 20px;
         }
 
+        .glyphicon.glyphicon-equalizer {
+			font-size: 25px;
+		}
+
         #link-registernow {
             padding-top: 5px;
             font-size: 15px;
@@ -152,7 +156,7 @@
                         <% if(userData != 'undefined' && userType != 'client') { %>
                         <li class="text-center"><a href="../staff/schedule">SCHEDULE</a></li>
                         <% } else { %>
-                        <li class="text-center"><a href="/"><span class="glyphicon glyphicon-info-sign"></span></a></li>
+                        <li class="text-center"><a href="/"><span class="glyphicon glyphicon-equalizer"></span></a></li>
                         <% } %>
                     </div>
 
