--- a/app/views/dashboard.ejs
+++ b/app/views/dashboard.ejs
@@ -95,6 +95,14 @@
          outline: 3px dotted rgb(189, 255, 6);
       } */
 
+		.avatar {
+			vertical-align: middle;
+			width: 50%;
+			height: 50%;
+			border-radius: 50%;
+			margin-bottom: 30px;
+		}
+
 		.bg {
 			/* The image used */
 			background-image: url("https://danw.hotglue.me/?webdesign.head.14452090501");
@@ -133,6 +141,10 @@
 			font-size: 150px;
 		}
 
+		.glyphicon.glyphicon-equalizer {
+			font-size: 25px;
+		}
+
 		.nav-item {
 			margin-left: 50px;
 			font-size: 20px;
@@ -165,7 +177,7 @@
 
 		#content-inner {
 			/* Rounded corners */
-			border-radius: 100px;
+			border-radius: 40px;
 			background-color: rgba(49, 3, 9, 0.3)
 		}
 
@@ -181,9 +193,13 @@
 		}
 
 		#personalDetails {
-			padding-top: 30px;
+			background-color: rgba(0, 0, 0, 0.9);
+			border-radius: 15px;
+			margin-top: 10px;
+			padding-top: 10px;
 			text-align: center;
-			font-size: 3em;
+			font-size: 33px;
+			font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 		}
 
 		#userIndicator {
@@ -220,21 +236,30 @@
 				<!-- Use nav-pills, nav-tabs. To center tabs add nav-justified to the class for ul -->
 				<ul class="nav nav-pills">
 
-					<div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-						<% if(userData != 'undefined' && userType != 'client') { %>
-						<li class="text-center"><a href="../staff/schedule">SCHEDULE</a></li>
-						<% } else { %>
-						<li class="text-center"><a href="/">HOME</a></li>
-						<% } %>
-					</div>
-
-					<div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
-						<li class="text-center"><a href="../rooms/accommodation">ACCOMMODATION</a></li>
-					</div>
-
-					<div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
-						<li class="text-center"><a href="../rooms/pricing">PRICING</a></li>
-					</div>
+					<% if (userType != 'owner') { %>
+						<div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
+							<% if(userData != 'undefined' && userType != 'client') { %>
+							<li class="text-center"><a href="../staff/schedule">SCHEDULE</a></li>
+							<% } else { %>
+							<li class="text-center"><a href="/">HOME</a></li>
+							<% } %>
+						</div>
+	
+						<div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-4">
+							<li class="text-center"><a href="../rooms/accommodation">ACCOMMODATION</a></li>
+						</div>
+	
+						<div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
+							<li class="text-center"><a href="../rooms/pricing">PRICING</a></li>
+						</div>
+					<% } else { %>
+						<div class="nav nav-pills col-lg-3 col-md-3 col-sm-3 col-xs-3">
+							<li class="text-center"><a href="/"><span class="glyphicon glyphicon-equalizer"></span></a></li>
+						</div>
+	
+						<div class="nav nav-pills col-lg-6 col-md-8 col-sm-12 col-xs-12">
+						</div>
+					<% } %>
 
 					<div class="nav nav-pills col-lg-2 col-md-2 col-sm-2 col-xs-2" id="profile-indicator">
 						<a href="dashboard"><span class="glyphicon glyphicon-home"></span></a>
@@ -258,7 +283,15 @@
 				<div class="col-lg-3 col-md-4 col-sm-4 col-xs-12" id="userMenu">
 					<div class="row">
 						<div class="text-center col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<span class="glyphicon glyphicon-user">
+							<% if (userType == 'client') { %>
+								<img src="../images/user.png" alt="Avatar" class="avatar">
+							<% } else if (userType == 'receptionist') { %>
+								<img src="../images/receptionist.png" alt="Avatar" class="avatar">
+							<% } else if (userType == 'manager') { %>
+								<img src="../images/manager.png" alt="Avatar" class="avatar">
+							<% } else if (userType == 'owner') { %>
+								<img src="../images/boss.png" alt="Avatar" class="avatar">
+							<% } %>
 						</div>
 					</div>
 					<div class="row">
@@ -280,10 +313,10 @@
 								</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Progress</a>
+								<a class="nav-link" href="dashboard/progress">Progress</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">System settings</a>
+								<a class="nav-link" href="dashboard/settings">System settings</a>
 							</li>
 						</ul>
 					</div>
@@ -292,7 +325,7 @@
 				<div class="col-lg-9 col-md-6 col-sm-8 col-xs-12" id="content-inner">
 					<div class="row" id="personalDetails">
 						<div class="text-center col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<p><span class="glyphicon glyphicon-edit">&nbsp;PERSONAL DETAILS</p>
+							<p>PERSONAL DETAILS</p>
 						</div>
 					</div>
 					<div class="row details-component">
@@ -308,7 +341,7 @@
 					</div>
 					<div class="row details-component">
 						<div class="text-left col-lg-12 col-md-12 col-sm-12 col-xs-12">
-							<p><span class="glyphicon glyphicon-earphone">&nbsp;Phone:</p>
+							<p><span class="glyphicon glyphicon-briefcase">&nbsp;Position: <%= userData.user.usertype %></p>
 						</div>
 					</div>
 				</div>
